

syntax= "proto3";

option java_multiple_files=true;
option java_package="com.kahindi.briskspringdemo";

package vehicle;


message Vehicle{

  string id = 1;
  string name= 2;
  string model= 3;

}

message VehicleID{
  string id= 1;
}

service VehicleService{
  rpc registerVehicle(Vehicle) returns (VehicleID);
  rpc findVehicleByID(VehicleID) returns (Vehicle);
}